# www

./: .env.example  .gitignore  README.md  dashboard.service  pyproject.toml
backend/: __main__.py  dev-mock.env.example  logging.json  main.py
backend/api/: auth.py  features.py  pages.py
backend/auth/: dependencies.py
backend/core/: config.py  security.py
backend/models/: auth.py  features.py
backend/services/: amneziawg.py  auth.py  backup.py  dns.py  settings.py  storage.py  wireguard.py  zapret.py
backend/templates/: base.html  dashboard.html  login.html
backend/templates/panels/: client.html  dns.html  wireguard.html  zapret.html
frontend/: index.html  login.html  manifest.json
frontend/css/: styles.css
frontend/js/: app.js  login.js
scripts/: generate_dev_mock_data.py
